Closed
Bug 914457
Opened 12 years ago
Closed 10 years ago
"ASSERTION: Non preserves axis aligned transform with clipped child should have forced intermediate surface"
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla43
Tracking | Status | |
---|---|---|
firefox43 | --- | fixed |
People
(Reporter: jruderman, Assigned: kip)
References
Details
(Keywords: assertion, testcase, Whiteboard: [webvr] [vrm3])
Attachments
(4 files, 1 obsolete file)
With:
user_pref("layers.force-active", true);
###!!! ASSERTION: Non preserves axis aligned transform with clipped child should have forced intermediate surface: 'is2D && matrix.PreservesAxisAlignedRectangles()', file gfx/layers/Layers.cpp, line 602
Reporter | ||
Comment 1•12 years ago
|
||
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → kgilbert
Assignee | ||
Comment 2•10 years ago
|
||
This patch corrects the issue. I'll post this on MozReview once I've converted the testcase to a mochitest.
Assignee | ||
Comment 3•10 years ago
|
||
Bug 914457 - Part 1: Use an empty clip rect for layers with an empty visible region
- Layer::CalculateScissorRect no longer asserts when all children of a
3d transformed layer have an empty visible region.
Assignee | ||
Comment 4•10 years ago
|
||
Bug 914457 - Part 2: Implement Crashtest
- Implemented a crashtest based on the testcase.
Assignee | ||
Comment 5•10 years ago
|
||
I have pushed to try to verify that the crashtest is working cross-platform:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=63afef4e5810
Assignee | ||
Comment 6•10 years ago
|
||
Comment on attachment 8658406 [details] [diff] [review]
Bug 914457 - Part 1: Use an empty clip rect for layers with an empty visible region
Marking earlier patch deprecated. Please review the MozReview patch instead.
Attachment #8658406 -
Attachment is obsolete: true
Assignee | ||
Updated•10 years ago
|
Whiteboard: [webvr] [vrm3]
Assignee | ||
Comment 7•10 years ago
|
||
This bug is causing this assertion to spam excessively in WebVR use cases.
Assignee | ||
Comment 8•10 years ago
|
||
Comment on attachment 8659489 [details]
MozReview Request: Bug 914457 - Part 1: Use an empty clip rect for layers with an empty visible region
Bug 914457 - Part 1: Use an empty clip rect for layers with an empty visible region
- Layer::CalculateScissorRect no longer asserts when all children of a
3d transformed layer have an empty visible region.
Attachment #8659489 -
Flags: review?(matt.woodrow)
Assignee | ||
Comment 9•10 years ago
|
||
Comment on attachment 8659490 [details]
MozReview Request: Bug 914457 - Part 2: Implement Crashtest
Bug 914457 - Part 2: Implement Crashtest
- Implemented a crashtest based on the testcase.
Attachment #8659490 -
Flags: review?(matt.woodrow)
Comment 10•10 years ago
|
||
Comment on attachment 8659489 [details]
MozReview Request: Bug 914457 - Part 1: Use an empty clip rect for layers with an empty visible region
https://reviewboard.mozilla.org/r/18937/#review16839
Attachment #8659489 -
Flags: review?(matt.woodrow) → review+
Comment 11•10 years ago
|
||
Comment on attachment 8659490 [details]
MozReview Request: Bug 914457 - Part 2: Implement Crashtest
https://reviewboard.mozilla.org/r/18939/#review16841
Attachment #8659490 -
Flags: review?(matt.woodrow) → review+
Comment 12•10 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/8129b18d7398
https://hg.mozilla.org/mozilla-central/rev/7367ddecab99
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox43:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in
before you can comment on or make changes to this bug.
Description
•