Bug 914457 - Part 1: Use an empty clip rect for layers with an empty visible region - Layer::CalculateScissorRect no longer asserts when all children of a   3d transformed layer have an empty visible region.